firefox/content: Fix overflow due to blur filter

--- a/config/firefox/chrome/userContent.d/newtab.css
+++ b/config/firefox/chrome/userContent.d/newtab.css
@@ -4,6 +4,7 @@ url(about:privatebrowsing){
 body {
 	background: var(--backdrop) !important;
 	backdrop-filter: blur(15px);
+	overflow: clip;
 }
 
 div {
